tests/lean/bad_quoted_symbol.lean.expected.out
bad_quoted_symbol.lean:2:12: error: first character of a quoted symbols cannot be a digit
bad_quoted_symbol.lean:3:16: error: unexpected space inside of quoted symbol
bad_quoted_symbol.lean: error: bad_quoted_symbol.lean:3:18: error: unexpected token
